# QEC-RD-Software

./: .gitignore  AGENTS.md  CODEX.md  NOTICE  README.md  codex_test_upload.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  pages.yml
assets/logos/: README.md
doc/: 2026-04-20-qec-rd-foundation-mvp.md
docs/: index.md
docs/api/: core.md  index.md  kernel.md  public-api.md
docs/architecture/: overview.md
docs/assets/: rotated_surface_si1000_threshold_showcase.csv  rotated_surface_si1000_threshold_showcase.json
docs/demos/: acceptance-showcase.md  builtin-repetition-memory.md  custom-decoder-hook.md  imported-stim-circuit.md  index.md  rotated-surface-si1000.md  sweep-analysis-report.md
docs/demos/assets/: rotated_surface_si1000_threshold_showcase.csv
docs/superpowers/plans/: 2026-04-20-qec-rd-phase0-foundation.md  2026-04-20-qec-rd-stage1-backbone-implementation.md  2026-04-21-qec-rd-stage1-3person-execution.md  2026-04-22-qec-rd-workstream-b-plan.md
docs/superpowers/skills/: index.md
docs/superpowers/skills/qec-rd-acceptance/: SKILL.md
docs/superpowers/skills/qec-rd-beginner-ler-onboarding/: SKILL.md
docs/superpowers/skills/qec-rd-importing-stim-circuits/: SKILL.md
docs/superpowers/specs/: 2026-04-20-qec-rd-platform-backbone-design-en.md  2026-04-20-qec-rd-platform-backbone-design.md  2026-04-24-qec-rd-readme-first-acceptance-entry-design.md
onboard/: SKILL.md
scripts/: README.md  adaptive_monitor.py  github_monitor.py  monitor_status.py
src/qec_rd/: __init__.py  api.py  demo.py  showcase.py  stim_demo.py
src/qec_rd/adapters/: stim.py
src/qec_rd/core/: __init__.py  artifacts.py  builtin_codes.py  codes.py  experiments.py  noise.py  results.py  types.py
src/qec_rd/kernel/: __init__.py  analysis.py  circuit.py  decode.py  graph.py  memory.py  runner.py
tests/: test_acceptance_coverage.py  test_analysis.py  test_analysis_runner.py  test_backbone_imports.py  test_builtin_catalog.py  test_builtin_codes.py  test_circuit_entry.py  test_core_models.py  test_decode.py  test_default_demo.py  test_dem_graph.py  test_noise_models.py  test_sampling.py  test_showcase.py  test_stim_demo.py
(+3 files in other folders)
