[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qec-rd-software"
version = "0.1.0"
description = "QEC R&D software backbone built on Stim with extensible circuit, graph, decode, and analysis layers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26,<2",
    "scipy>=1.13",
    "stim>=1.14,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pymatching>=2.2",
    "ldpc>=2.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["qec_rd"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
